package api.request.skelethon.interfaces;

public interface GetAllEndpointInterface {

    public Object getAll(Class<?> clazz);

}
